--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "simple-typescript-atm-machine",
-  "version": "1.0.1",
+  "name": "muhammadzaeemaltaf_atm_machine",
+  "version": "1.0.0",
   "description": "TypeScript project for checking balance and making withdrawals via command line interface. Securely manage your funds with ease!",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
   "publishConfig": {
     "access": "public"
   },
-  "bin": "index.js",
+  "bin": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
